<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="carbonfibers">CarbonFibers</string>
    <string name="system_category">System</string>
    <string name="buttons_category">Buttons</string>
    <string name="display_tweaks_category">Display tweaks</string>
    <string name="misc_category">Misc</string>
    <string name="privacy_category">Privacy</string>
    <string name="statusbar_category">Status bar</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="lights_category">Lights</string>
    <string name="reset">Reset</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="enabled">Enabled</string>
    <string name="choose_app">Choose application</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="advanced">Advanced</string>
    <string name="profiles_add">Add...</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="ok">Okay</string>
    <string name="buttons_software_category">Software buttons</string>
    <string name="buttons_volume_category">Volume buttons</string>
    <string name="status_bar_battery_style_category">Battery icon</string>
    <string name="status_bar_battery_style_summary">Change and customize battery icon</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_solid">Solid</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_style_tile_title">Custom battery tile style</string>
    <string name="status_bar_battery_style_tile_summary">Allow to set the same icon style chosen for the statusbar battery</string>
    <string name="status_bar_charge_color_title">Statusbar battery icon charging color</string>
    <string name="status_bar_charge_color_summary">Set the color of the statusbar battery icon while charging</string>
    <string name="force_charge_battery_text_title">Statusbar battery charging percent</string>
    <string name="force_charge_battery_text_summary_on">Show the battery percentage outside the icon while charging</string>
    <string name="force_charge_battery_text_summary_off">Show the battery percentage inside the icon while charging</string>
    <string name="text_charging_symbol_title">Customized charging symbol</string>
    <string name="text_charging_symbol_dialog">Customized charging symbol</string>
    <string name="text_charging_symbol_default">Disabled</string>
    <string name="text_charging_symbol_flash">Flash</string>
    <string name="text_charging_symbol_tilde">Tilde</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Modify quick settings behavior</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="traffic_summary">Show traffic indicator options</string>
    <string name="recents_category">Recents</string>
    <string name="recents_summary">Edit recents layout and features</string>
    <string name="pixel_navbar_anim_title">Enable Pixel home animation</string>
    <string name="pixel_navbar_anim_summary">Enables the Pixel\'s home button animations</string>
    <string name="navbar_tuner_title">Edit navigation bar</string>
    <string name="navbar_tuner_summary">Customize buttons and layout</string>
    <string name="hide_apps_from_recents_title">Hide apps from recents</string>
    <string name="hide_apps_from_recents_summary">Choose apps to hide from the recents menu</string>
    <string name="hide_from_recents_add_app">Add app</string>
    <string name="title_activity_carbon_recents_settings">Recents</string>
    <string name="carbonfibers_dialog_title">Help us help you!</string>
    <string name="carbonfibers_dialog_message">Unfortunately, we are not wizards!\n\nSo, if you find a bug with any setting in CarbonFibers, please open up a ticket on Jira or contact a Carbon developer with the following.\n\n1. Blame kwoktopus\n2. Logcat and/or last_kmsg\n3. Kernel and mods used\n4. Useful information (subjective)\n\nIf you fail to report something with the above information, do not expect things to be fixed. Remember, we are not as perfect as Patrick, so we do miss things occasionally.</string>
    <string name="carbonfibers_dialog_toast">READ THE WHOLE THING!</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Edit power menu options</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_torch">Torch</string>
    <string name="powermenu_screenrecord">Screen record</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
    <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
    <string name="powermenu_lockdown">Lock now</string>
    <string name="powermenu_soundpanel">Sound panel</string>
    <string name="powermenu_dialog_dim">Dialog dim background amount</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide on lock screen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="power_menu_animation_aosp">AOSP (default)</string>
    <string name="power_menu_animation_bottom">Bottom</string>
    <string name="power_menu_animation_top">Top</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="pref_scrollingcache_force_enable">Force enable</string>
    <string name="pref_scrollingcache_default_enable">Default enable</string>
    <string name="pref_scrollingcache_default_disable">Default disable</string>
    <string name="pref_scrollingcache_force_disable">Force disable</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="qs_header_title">Header</string>
    <string name="carrier_label_settings_title">Carrier label</string>
    <string name="double_tap_status_bar_sleep_title">Double tap statusbar to sleep</string>
    <string name="double_tap_status_bar_sleep_summary">Double tap status bar to put the device to sleep</string>
    <string name="recents_cab">Clear All Button Tweaks</string>
    <string name="recents_visuals">Recents Extra Visuals</string>
    <string name="immersive_recents_title">Immersive Recents</string>
    <string name="immersive_recents_summary">Change the view of the recents screen</string>
    <string name="immersive_recents_dialog_title">Select recents view</string>
    <string name="systemui_recents_mem_display_title">Show Memory Bar</string>
    <string name="systemui_recents_mem_display_summaryOn">RAM bar enabled</string>
    <string name="systemui_recents_mem_display_summaryOff">RAM bar disabled</string>
    <string name="show_clear_all_recents_button_title">Enable clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show the clear all button when using recents</string>
    <string name="recents_clear_all_location_title">Clear all button location</string>
    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
    <string name="volbtn_down_zen_summary">allow volume down to enter do not disturb mode</string>
    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
    <string name="volbtn_up_zen_summary">allow volume up to exit do not disturb mode</string>
    <string name="vol_zen_title">Do not disturb switch</string>
    <string name="vol_zen_summary">Show do not disturb switch on volume panel</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="volume_steps_summary">Modify the number of volume steps</string>
    <string name="anonymous_statistics_title">CarbonROM statistics</string>
    <string name="anonymous_statistics_summary">Help make CarbonROM better by opting into anonymous statistics reporting</string>
    <string name="enable_navigation_bar_title">Enable software keys</string>
    <string name="enable_navigation_bar_summary">Enable on-screen navigation keys</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Assist button</string>
    <string name="hardware_keys_app_switch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="display_tweaks">Display Tweaks</string>
    <string name="dashboard_columns_title">Number of Columns</string>
    <string name="dashboard_columns_summary">Change the number of columns displayed in the dashboard</string>
    <string name="dashboard_columns_dialog_title">Select number of columns</string>
    <string name="dashboard_summary_double_lines_title">Tile summary lines</string>
    <string name="dashboard_summary_double_lines_summary_on">Show dashboard tile summaries in more lines</string>
    <string name="dashboard_summary_double_lines_summary_off">Show dashboard tile summaries in 1 line</string>
    <string name="remove_tile_summaries_title">Remove tile summaries</string>
    <string name="remove_tile_summaries_summary">Remove tiles summaries that display underneath tile titles</string>
</resources>