<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 CarbonROM

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/recents_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/recents_cab">

        <com.android.settings.carbon.SystemSettingSwitchPreference
            android:key="show_clear_all_recents"
            android:title="@string/show_clear_all_recents_button_title"
            android:summary="@string/show_clear_all_recents_button_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="recents_clear_all_location"
            android:title="@string/recents_clear_all_location_title"
            android:entries="@array/recents_clear_all_location_entries"
            android:entryValues="@array/recents_clear_all_location_values"
            android:defaultValue="3"
            android:dependency="show_clear_all_recents" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/recents_visuals">

        <com.android.settings.carbon.SystemSettingSwitchPreference
            android:key="systemui_recents_mem_display"
            android:title="@string/systemui_recents_mem_display_title"
            android:summaryOn="@string/systemui_recents_mem_display_summaryOn"
            android:summaryOff="@string/systemui_recents_mem_display_summaryOff"
            android:defaultValue="false" />

        <ListPreference
            android:key="immersive_recents"
            android:title="@string/immersive_recents_title"
            android:summary="@string/immersive_recents_summary"
            android:dialogTitle="@string/immersive_recents_dialog_title"
            android:entries="@array/immersive_recents_entries"
            android:entryValues="@array/immersive_recents_values"
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
