<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/buttons_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/buttons_software_category">

        <com.android.settings.carbon.SystemSettingSwitchPreference
            android:key="pixel_nav_animation"
            android:title="@string/pixel_navbar_anim_title"
            android:summary="@string/pixel_navbar_anim_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="navigation_bar"
            android:title="@string/enable_navigation_bar_title"
            android:summary="@string/enable_navigation_bar_summary"
            android:defaultValue="false" />

        <PreferenceScreen
            android:title="@string/navbar_tuner_title"
            android:summary="@string/navbar_tuner_summary" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.NavbarActivity" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/buttons_volume_category">

        <com.android.settings.carbon.SecureSettingSwitchPreference
            android:key="sysui_volume_down_silent"
            android:title="@string/volbtn_down_zen_title"
            android:summary="@string/volbtn_down_zen_summary"
            android:defaultValue="true"/>

        <com.android.settings.carbon.SecureSettingSwitchPreference
            android:key="sysui_volume_up_silent"
            android:title="@string/volbtn_up_zen_title"
            android:summary="@string/volbtn_up_zen_summary"
            android:defaultValue="true" />

        <com.android.settings.carbon.SecureSettingSwitchPreference
            android:key="sysui_show_full_zen"
            android:title="@string/vol_zen_title"
            android:summary="@string/vol_zen_summary"
            android:defaultValue="false"/>

        <com.android.settings.carbon.SystemSettingSwitchPreference
            android:key="volume_rocker_wake"
            android:summary="@string/volume_rocker_wake_summary"
            android:title="@string/volume_rocker_wake_title"
            android:defaultValue="false"
            android:disableDependentsState="true" />

        <com.android.settings.carbon.SystemSettingSwitchPreference
            android:key="volume_rocker_music_controls"
            android:summary="@string/volume_rocker_music_controls_summary"
            android:title="@string/volume_rocker_music_controls_title"
            android:defaultValue="false"
            android:dependency="volume_rocker_wake" />

        <com.android.settings.carbon.SystemSettingSwitchPreference
            android:key="swap_volume_buttons"
            android:title="@string/swap_volume_buttons_title"
            android:summary="@string/swap_volume_buttons_summary"
            android:defaultValue="false" />

        <PreferenceScreen
            android:key="volume_steps"
            android:title="@string/volume_steps_title"
            android:summary="@string/volume_steps_summary"
            android:fragment="org.carbonrom.carbonfibers.fragments.buttons.VolumeSteps" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="home_key"
        android:title="@string/hardware_keys_home_key_title" >

        <ListPreference
            android:key="hardware_keys_home_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_home_double_tap"
            android:dialogTitle="@string/hardware_keys_double_tap_title"
            android:title="@string/hardware_keys_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="back_key"
        android:title="@string/hardware_keys_back_key_title" >

        <ListPreference
            android:key="hardware_keys_back_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_back_double_tap"
            android:dialogTitle="@string/hardware_keys_double_tap_title"
            android:title="@string/hardware_keys_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="menu_key"
        android:title="@string/hardware_keys_menu_key_title" >

        <ListPreference
            android:key="hardware_keys_menu_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_menu_double_tap"
            android:dialogTitle="@string/hardware_keys_double_tap_title"
            android:title="@string/hardware_keys_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="assist_key"
        android:title="@string/hardware_keys_assist_key_title" >

        <ListPreference
            android:key="hardware_keys_assist_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_assist_double_tap"
            android:dialogTitle="@string/hardware_keys_double_tap_title"
            android:title="@string/hardware_keys_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_switch_key"
        android:title="@string/hardware_keys_app_switch_key_title" >

        <ListPreference
            android:key="hardware_keys_app_switch_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_app_switch_double_tap"
            android:dialogTitle="@string/hardware_keys_double_tap_title"
            android:title="@string/hardware_keys_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="camera_key"
        android:title="@string/hardware_keys_camera_key_title">

        <ListPreference
            android:key="hardware_keys_camera_long_press"
            android:dialogTitle="@string/hardware_keys_long_press_title"
            android:title="@string/hardware_keys_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="hardware_keys_camera_double_tap"
            android:dialogTitle="@string/hardware_keys_double_tap_title"
            android:title="@string/hardware_keys_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
