<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 CarbonROM

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.android.settings.carbon.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_status_bar_sleep_title"
        android:summary="@string/double_tap_status_bar_sleep_summary"
        android:defaultValue="false" />

    <Preference
        android:fragment="org.carbonrom.carbonfibers.fragments.statusbar.QuickSettings"
        android:icon="@drawable/ic_quicksettings"
        android:title="@string/quicksettings_category" />

    <Preference
        android:fragment="org.carbonrom.carbonfibers.fragments.statusbar.Traffic"
        android:icon="@drawable/ic_traffic"
        android:title="@string/traffic_category" />

    <Preference
        android:fragment="org.carbonrom.carbonfibers.fragments.statusbar.Clock"
        android:icon="@drawable/ic_clock_date"
        android:title="@string/status_bar_clock_title" />

    <Preference
        android:fragment="org.carbonrom.carbonfibers.fragments.statusbar.Header"
        android:icon="@drawable/ic_statusbar"
        android:title="@string/qs_header_title" />

    <PreferenceScreen
        android:fragment="org.carbonrom.carbonfibers.fragments.statusbar.CarrierLabelSettings"
        android:icon="@drawable/ic_carrierlabel"
        android:title="@string/carrier_label_settings_title" />

</PreferenceScreen>
