<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 CarbonROM

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceScreen
        android:icon="@drawable/ic_hafr"
        android:title="@string/hide_apps_from_recents_title"
        android:summary="@string/hide_apps_from_recents_summary" >
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.settings"
            android:targetClass="org.carbonrom.carbonfibers.fragments.privacy.hideappfromrecents.HAFRAppListActivity" />
    </PreferenceScreen>

    <!-- Anonymous statistics - (CRStats) -->
    <PreferenceScreen
        android:key="crstats"
        android:title="@string/anonymous_statistics_title"
        android:summary="@string/anonymous_statistics_summary"
        android:fragment="org.carbonrom.carbonfibers.crstats.AnonymousStats" >
    </PreferenceScreen>

</PreferenceScreen>
