<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 CarbonROM

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/carbonfibers"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

   <Preference
       android:fragment="org.carbonrom.carbonfibers.fragments.misc.Misc"
       android:icon="@drawable/ic_misc"
       android:title="@string/misc_category" />

   <Preference
       android:fragment="org.carbonrom.carbonfibers.fragments.privacy.Privacy"
       android:icon="@drawable/ic_privacy"
       android:title="@string/privacy_category" />

   <Preference
       android:fragment="org.carbonrom.carbonfibers.fragments.system.System"
       android:icon="@drawable/ic_system"
       android:title="@string/system_category" />

</PreferenceScreen>
